# net-sentinel

./: Installing  LICENSE  README.md
net_sentinel_v01/: COPYRIGHT  mypubkey.asc  net_sentinel_events.jsonl  pyproject.toml
net_sentinel_v01/net_sentinel/: config_default.toml
net_sentinel_v01/net_sentinel_v01.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
