[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "net_sentinel_v01"
version = "0.1.0"
description = "A lightweight cross-platform network activity sentinel (Kali/Linux & Windows) - v0.1"
authors = [{name="You", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "psutil>=5.9.0",
  "tomli>=2.0.0",
  "rich>=12.0.0"
]
dynamic = []
[project.scripts]
net-sentinel = "net_sentinel.cli:main"
